--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@ html{
 .container {
     width:90%;
     margin:50px auto;
-    background-color: chartreuse;
 }
 
 .flex{
@@ -20,10 +19,9 @@ html{
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    background-color: blue;
 }
 
-h2, h3, a, button{
+h2, h3, a, h4{
     font-family: "Hades", serif;
 }
 
@@ -50,17 +48,14 @@ img{
 
 .w45{
     width:45%;
-    background-color: green;
 }
 
 .w30{
     width: 30%;
-    background-color: red;
 }
 
 .w10{
     width: 5%;
-    background-color: red;
 }
 
 li{
@@ -77,7 +72,7 @@ header{
     height: 100vh;
     background-image: url(../img/wall.jpg);
     background-position: top center;
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
 }
 
@@ -99,7 +94,6 @@ header img{
 header nav ul{
     width: 7%;
     padding: 2vh auto;
-    background-color: pink;
 }
 
 header nav li{
@@ -210,16 +204,125 @@ section#megaera{
     color: white;
 }
 
-button{
-    margin-top: 5px;
-    margin-bottom: 5px;
-    width: 100%;
+h4{
+    text-align: center;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    width: 60%;
     background-color: white;
     color: red;
-    border-radius:100vmax;
-    border:solid 1px white;
+    border-radius:10px;
     font-size:2rem;
-    cursor: pointer;
+}
+
+footer figure{
+    gap:4rem;
+    overflow: visible;
+}
+
+footer div.w30 {
+    overflow: visible;
+}
+
+footer div.w30:first-of-type{
+    background-image: url(../img/Athena.png);
+    background-size: contain;
+    background-position: bottom center;
+    height: 30vh;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+footer div.w30:first-of-type h4{
+    background-color: rgb(179, 144, 255);
+    color: rgb(250, 250, 106);
+}
+
+footer div.w30:nth-of-type(2){
+    background-image: url(../img/Zeus.png);
+    background-size: contain;
+    background-position: bottom center;
+    height: 30vh;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+footer div.w30:nth-of-type(2) h4{
+    background-color: rgb(250, 250, 106);
+    color: rgb(98, 79, 79);
+}
+
+footer div.w30:nth-of-type(3){
+    background-image: url(../img/Artemis.png);
+    background-size: contain;
+    background-position: bottom center;
+    height: 30vh;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+footer div.w30:nth-of-type(3) h4{
+    background-color: rgb(65, 98, 56);
+    color: white;
+}
+
+footer div.w30:nth-of-type(4){
+    background-image: url(../img/Demeter.png);
+    background-size: contain;
+    background-position: bottom center;
+    height: 30vh;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+footer div.w30:nth-of-type(4) h4{
+    background-color: rgb(188, 237, 233);
+    color: rgb(98, 79, 79);
+}
+
+footer div.w30:nth-of-type(5){
+    background-image: url(../img/Poseidon.png);
+    background-size: contain;
+    background-position: bottom center;
+    height: 30vh;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+footer div.w30:nth-of-type(5) h4{
+    background-color: rgb(112, 186, 128);
+    color: black;
+}
+
+footer div.w30:nth-of-type(6){
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    height: 30vh;
+    border-radius: 50px 50px 0 0;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.1));
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    text-align: center;
+    color: white;
+    gap:1rem;
+}
+
+footer div.w30:nth-of-type(6) h4{
+    background-color: red;
+    color:white;
 }
 
 /* footer */
@@ -228,7 +331,7 @@ footer{
     height: 100vh;
     background-image: url(../img/fond2.jpeg);
     background-position: top;
-    background-size: cover;
+    background-size: contain;
     background-repeat: no repeat;
     position: relative;
 }
